# shodh-memory

./: .env.example  .gitignore  .graphon_run  .locomo_run_id  .mcp.json  AUDIT_SUMMARY.md  BENCHMARKS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPETITIVE_ADVANTAGES.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  Dockerfile  EDGE_ROADMAP.md  FIXES_COMPLETED.md  GRAPH_MEMORY_ARCHITECTURE.md  LICENSE  Makefile  NOTICE  PYTHON_SDK.md  README-python.md  README-rust.md  README.md  REFACTOR_PLAN.md  SECURITY.md  URGENT_EMBEDDING_FIX.md  bench_full.txt  docker-compose.yml  graph_temp.json  iDEX_concept_document.odt  openapi.yaml  pitch-deck-stata.md  pyproject.toml  shodh-market.csv  shodh_business_case.html  shodh_config.example.json
.cargo/: config.toml
.github/workflows/: ablation.yml  batched-guard.yml  benchmark.yml  ci.yml  companion-rerank-longmemeval.yml  crates.yml  diag-onnx-probe.yml  directed-collapse-measure.yml  docker.yml  embedder-ablation.yml  embedder-confirm-int8.yml  embedder-session-granularity.yml  entityres-effect-audit.yml  er-causal-loop.yml  er-merge-gate-confirm.yml  fusion-ab.yml  fusion-flat-confirm.yml  fusion-variant-ab.yml  fusion-vectrust-sweep.yml  gliner-ner-ablation.yml  glirel-onnx-probe.yml  graph-d1-ab.yml  graph-edge-dir-ab.yml  kg-error-detection.yml  layer-ablation.yml  lineage-diagnosis.yml  linkpred-ablation.yml  locomo-recall.yml  locomo.yml  longmemeval.yml  mcp-registry.yml  multihop-companion-ab.yml  ner-ablation.yml  npm.yml  (+13 more)
.github/workflows-archive/: README.md  boost-ablation-l5.yml  boost-ablation.yml  embedder-bakeoff.yml  fitted-confirm.yml  fusion-adaptive-sweep.yml  fusion-agreement-sweep.yml  fusion-feature-fit.yml  fusion-fitted-ab.yml  fusion-sum-sweep.yml  glirel-onnx-probe.yml  graph-d1-ab.yml  graph-entityres-ab.yml  graph-leg-ab.yml  graph-typing-ab.yml  leg-isolation.yml  lineage-diagnosis.yml  nomic-768-int8.yml  nomic-confirm-int8.yml  ppr-confirm.yml  ppr-passage-ab.yml  ppr-specificity-ab.yml  reach-inject-ab.yml  spec-fusion-ablation.yml  substrate-diagnostics.yml  substrate-fixes-ab.yml  vamana-exact.yml
benches/: adaptive_memory_benchmarks.rs  associative_retrieval_benchmarks.rs  cognitive_benchmarks.rs  graph_benchmarks.rs  hebbian_benchmarks.rs  integration_benchmarks.rs  memory_benchmarks.rs  ner_benchmarks.rs  pipeline_benchmarks.rs  relevance_benchmarks.rs  softmax_benchmarks.rs  streaming_benchmarks.rs
benchmarks/: README.md  benchmark_mem0.py  benchmark_shodh.py  build_gliner_replay.py  build_locomo_gate.py  compare.py  kg_error_inject.py  locomo_layer_eval.py  locomo_results.json  locomo_test2.json  locomo_to_harness.py  longmemeval_to_harness.py  reader_composition.py  run_benchmarks.sh
crates/spacy-rusty/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  rustfmt.toml
crates/spacy-rusty/src/: attribute_ruler.rs  capi.rs  features.rs  hash.rs  lemmatizer.rs  lexeme.rs  lib.rs  matcher.rs  ml.rs  model.rs  ner.rs  parser.rs  pipeline.rs  tagger.rs  tok2vec.rs  tokenizer.rs  transition.rs  vectors.rs  wasm.rs
docs/: API_REFERENCE.md  BLOCK_DIAGRAM.md  JPEG_TO_PDF_INSTRUCTIONS.md  MEDIA_GUIDE.md  MERMAID_DIAGRAMS.md  PITCH_DECK.md  README.md  TECHNICAL_DETAILS.md  convert_images_to_pdf.py  convert_to_pdf.bat  direct-server-systemd.md  encryption-v2-design.md  robotics-quickstart.md
drafts/: recall-audit.md
examples/: basic_usage.py  robot_example.py  semantic_search.py
experiments/: fractal_mdl_experiment.ipynb  fractal_mdl_honest_test.ipynb
front/: Cargo.toml  index.html
front/src/: main.rs
homebrew/: shodh-memory.rb
hooks/: claude-settings.json  memory-hook.ts
literature/: PAPERS_SUMMARY.md
mcp-server/: README.md  drain.ts  index.ts  ipc-client.ts  memory-format.ts  package.json  security-utils.ts  server.json  string-utils.ts  test-orphan-fix.sh  token-tracking.ts  version.ts  vitest.config.ts
notebooks/: shodh_memory_demo.ipynb
paper/: shodh_memory.tex  shodh_memory_arxiv.md
python/: setup.py
scripts/: build_wikidata_kb.py  export_gliner_bi_edge.py  fit_fusion_calibration.py  g3_clean_ab.sh  g3_measure.sh  harness_poller.sh  lever1_poller.sh  lineage_funnel.sh  lineage_rerun.sh  load_sessions.py  purge_and_load.sh  recall_diff.py  shodh-statusline.sh  v2_clean_ab.sh  validate_typer.py
seps/: SEP-002-memory-interchange-format.md  conversation-events.md  example.mif.json  mcp-sep-mif.md  mif-v1.schema.json
specs/: openapi.yaml
src/: ab_testing.rs  appositive.rs  auth.rs  backup.rs  catena.rs  causal_vocab.rs  cli.rs  config.rs  constants.rs  contrastive.rs  decay.rs  dep_parser.rs  encryption.rs  entity_resolution.rs  errors.rs  fs_matcher.rs  graph_memory.rs  kb.rs  keystore.rs  lib.rs  local_ipc.rs  main.rs  mcp.rs  metrics.rs  middleware.rs  migration.rs  oblivious.rs  openie.rs  pir.rs  python.rs  relation_typer.rs  relevance.rs  serialization.rs  server.rs  similarity.rs  streaming.rs  system_memory.rs  telemetry.rs  token_estimation.rs  tracing_setup.rs  (+1 more)
static/: dashboard.css  dashboard.js  index.html
tests/: adaptive_memory_tests.rs  brutal_stress_tests.rs  bug_regression_tests.rs  causal_spine_live.rs  chunking_retrieval_tests.rs  cognitive_memory_tests.rs  cognitive_stress_test.rs  consolidation_tests.rs  dep_parser_parity.rs  encryption_index_blinding.rs  encryption_keystore_guard.rs  encryption_relocation.rs  encryption_round_trip.rs  encryption_wrong_passphrase.rs  entity_resolution_bridge.rs  file_memory_tests.rs  graph_memory_tests.rs  handler_pipeline_tests.rs  handler_tests.rs  hebbian_learning_tests.rs  integration_tests.rs  integration_webhook_tests.rs  lineage_branch_tests.rs  memory_persistence_tests.rs  memory_tiering_tests.rs  ner_neural_tests.rs  ner_tests.rs  onnx_memory_probe.rs  pipeline_integration_tests.rs  query_filter_tests.rs  recall_determinism.rs  recall_eval_cli.rs  salience_tests.rs  spreading_activation_tests.rs  storage_edge_case_tests.rs  timing_sla_tests.rs  universe_tests.rs
tui/: Cargo.toml  ascii-art-shodh.txt
tui/src/: logo.rs  main.rs  stream.rs  types.rs  widgets.rs
(+211 files in other folders)
