# Vendored from https://github.com/maymaywa/spacy-rusty (MIT OR Apache-2.0).
# A pure-Rust reimplementation of spaCy's English pipeline (tokenizer, tagger,
# parser, lemmatizer, NER, vectors) loading weights exported from en_core_web_sm.
# Vendored (not a git/path dep to an external checkout) for sovereignty: the
# engine ships deterministic, auditable, no external fetch. See NOTICE for the
# spaCy attribution. Model bundle (model.json + model.safetensors, ~15 MB) is
# NOT committed — it is loaded at runtime from SHODH_SPACY_MODEL_PATH, mirroring
# the GLiNER/MiniLM asset convention.
[package]
name = "spacy-rusty"
version = "0.1.0"
edition = "2021"
description = "spaCy's English pipeline (tokens, POS, parser, lemmatizer, NER, vectors) as pure Rust — no Python."
license = "MIT OR Apache-2.0"
repository = "https://github.com/maymaywa/spacy-rusty"
keywords = ["nlp", "spacy", "ner", "parser"]
categories = ["text-processing", "science"]

[features]
# In-engine we build native only; the wasm bindings (bindgen/capi) are
# target_arch = "wasm32" gated and never compile here. Default off so no wasm
# binding code is even referenced in the native build graph.
default = []
bindgen = []  # wasm-bindgen browser bindings (mod wasm)
capi = []     # plain C-ABI exports for wasmtime / non-JS hosts (mod capi)

[dependencies]
fancy-regex = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[lib]
# rlib only: consumed as a normal Rust library by shodh-memory. The upstream
# cdylib target exists for wasm; we do not need it in-engine.
crate-type = ["rlib"]
